# aseprite-mcp-docker

./: .dockerignore  .gitignore  COPILOT_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
aseprite_mcp/: __init__.py  __main__.py
aseprite_mcp/core/: __init__.py  commands.py
aseprite_mcp/tools/: __init__.py  canvas.py  drawing.py  export.py  file_router.py
exports/: .gitkeep
projects/: .gitkeep
tests/: __init__.py  conftest.py  test_canvas.py  test_commands.py  test_drawing.py  test_export.py  test_file_router.py  test_integration.py
